--- a/layouts/rollScreen.html
+++ b/layouts/rollScreen.html
@@ -66,7 +66,7 @@
           <input type="checkbox" id="lockShopToggle" class="toggle-checkbox" />
         </td>
         <td class="input-cell">
-          <button id="rollActionButton" class="roll-button">Roll</button>
+          <button id="generateEggButton" class="roll-button">Roll</button>
         </td>
       </tr>
       <!-- New Row for Generate Egg Button -->
